static/styles.css
body {
    font-family: Arial, sans-serif;
    background-color: #e0e1dd;
    margin: 0;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.content {
    flex-grow: 1;
}

/* Navigation Bar*/

/*----- Style -----*/
.nav_bar {
    background-color: crimson;
}

.nav_bar * {
    color: white;
    text-decoration: none;
    font-size: 20px;
    font-family: Arial;
    font-weight: bold;
}

.nav_bar a:hover {
    color: black;
}

/*----- Layout (Desktop) -----*/


.nav_bar {
    display: flex;
    justify-content: space-between; /* This pushes elements to the ends (left and right) */
    align-items: center; /* Center vertically within the container */
}



.nav_bar .log_data_btn {
    margin-left: auto; /* Push "Log Data" to the right */
}

.nav_bar a {
    margin: 0 10px; /* Add some spacing between links */
    padding: 20px;
}

/*----- Layout (Phone) -----*/

@media screen and (max-width: 768px) {
    .nav_bar {
        flex-direction: column; /* Stack elements vertically */
        text-align: center; /* Center-align text */
    }

    .nav_bar a {
        margin: 10px 0; /* Add spacing between links */
        padding: 0;
    }

    .nav_bar .log_data_btn {
    margin-left: 0;
    }
}


.entry_status_content{
    color: green;
    text-align: center;
    font-size: 24px;
    text-align: center;
    margin-top: 20px;
}


h2 {
    text-align: center;
    color: black;
    margin-bottom: 0;
}

.button {
    display: block;
    width: 250px;
    margin: 20px auto;
    padding: 20px 40px;
    font-size: 24px;
    background-color: #3498db;
    color: #fff;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    text-decoration: none;
    text-align: center;
}


.retrieveForm {
    max-width: 400px;
    margin: 0 auto;
    background: #fff;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

label {
    display: block;
    margin-bottom: 8px;
    font-weight: bold;
    color: #333;
}

input[type="text"],
input[type="date"],
input[type="time"],
select,
textarea {
    width: 95%;
    padding: 10px;
    margin-bottom: 15px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 16px;
}

input[type="radio"] {
    margin-right: 5px;
}

input[type="submit"] {
    background: #007BFF;
    color: #fff;
    padding: 12px 20px;
    border: none;
    border-radius: 5px;
    font-size: 18px;
    cursor: pointer;
    transition: background 0.3s;
}

input[type="submit"]:hover {
    background: #0056b3;
}

/* ---- Non Forms (Button Uses) ----*/
    .non-form {
    max-width: 100%;
    margin: auto;
    border: 0;
    border-radius: 0;
    background-color: inherit;
    padding:0;

}

.non-form > button {
    width: 100%;
    border-radius: 15px;
}


/* Style the page header */
h1 {
    text-align: center;
    margin-top: 20px;
}

/* Style the form container */
form {
    max-width: 400px;
    margin: 0 auto;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #778da9;
    padding:30px;
    border-radius: 30px;
}

/* Style form labels */
label {
    display: block;
    font-weight: bold;
    margin-bottom: 5px;
}

/* Style form inputs and buttons */
input[type="text"],
input[type="date"],
button {
    width: 95%;
    padding: 10px;
    margin-bottom: 15px;
    border: 1px solid #ccc;
    border-radius: 3px;
    font-size: 16px;
}

button {
    background-color: #007BFF;
    color: #fff;
    cursor: pointer;
    transition: background-color 0.3s;
}

button:hover {
    background-color: #0056b3;
}

/* Style the response container */
#response {
    margin-top: 20px;
    text-align: center;
    font-weight: bold;
    color: #007BFF;
}

/*----- Table Styling -----*/

table {
    width: 80%;
    border-collapse: collapse;
    background-color: #C23373;
    color: white;
    margin: 20px auto;
}

th, td {
    padding: 12px 15px;
    text-align: left;
    border-bottom: 1px solid #fff   ;
}

th {
    background-color: #79155B;
    color: white;
}

tr:nth-child(even) {
    background-color: #F6635C;
}

.delete-form {
    display: inline;
    background-color: red;
    padding: 0;
    border: none;
}


tr:nth-child(odd) > td > form > button {
    background-color: #c23373;
}

tr:nth-child(even) > td > form > button {
    background-color: #f6635c;
}

.delete-btn {
    border: none;
    margin: 0;
}

.delete-btn-svg {
    fill: white;
}

@media screen and (max-width: 768px) {
    table {
        width: 90%;

    }

    th, td {
        padding: 10px;
    }

    th:nth-child(4),
    td:nth-child(4) {
        display: none;
        }

    th:nth-child(7),
    td:nth-child(7) {
        display: none;
        }
}

/*----- Last Entry Table Styling -----*/

.last_entry {
    display:flex;
    flex-direction: column;
    margin-bottom: 100px;

}

.remove_last_entry{
    width: 40%;
    display: inline-block;
    margin:0 auto;
}

/*----- Footer Styling -----*/

footer {
    background-color:#1b263b;
    color:white;
    margin:0 auto;
    text-align:center;
    padding:5px 0;
    font-size: 1.1em;
    margin-top: 20px;
    width: 100%;
}

.today_btn {
    width: 300px;
}

